--- a/homepage/index.html
+++ b/homepage/index.html
@@ -169,7 +169,7 @@
                 <p>447360803@qq.com</p>
             </div>
             <h3 class="card-sub-title">Send Me a Message</h3>
-            <form action="/" id="contactForm" class="form">
+            <form action="/" id="contactForm" class="xui-form">
                 <div class="form-group">
                     <input type="text" class="form-control" name="name" placeholder="Name" required/>
                 </div>
@@ -180,10 +180,10 @@
                     <input type="text" class="form-control" name="subject" placeholder="Subject" required/>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" name="message" placeholder="Message" required></textarea>
+                    <textarea class="form-control" name="message" placeholder="Message" rows="5" required></textarea>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="submit-btn" value="Send😀" />
+                    <input type="submit" class="xui-btn submit-btn" value="Send!" />
                 </div>
             </form>
         </div>
