--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="xui-menu-item"><a href="#skills-card">Skills</a></li>
                 <li class="xui-menu-item"><a href="#case-card">Cases</a></li>
                 <li class="xui-menu-item"><a href="#contact-card">Contact</a></li>
-                <li class="xui-menu-item"><a href="/blog/">Blog</a></li>
+                <li class="xui-menu-item"><a href="http://xitengfei.github.io/blog/">Blog</a></li>
             </ul>
         </div>
 
@@ -40,7 +40,7 @@
             </div>
             <div class="xui-card-desc">
                 <h1 class="main-title">Hi, i'm <i class="accent-color">XiTengfei!</i></h1>
-                <h2 class="sub-title">A Front-end Developer</h2>
+                <h2 class="sub-title">A PHP Developer</h2>
                 <hr>
                 <div class="description">
                     <p>I'm not a genius, but I've been working hard.</p>
@@ -51,9 +51,9 @@
             </div>
             <div class="xui-card-footer">
                 <div class="social-btns">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-github"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100009324970191" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://github.com/xitengfei" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://twitter.com/xitengfei" target="_blank"><i class="fa fa-twitter"></i></a>
                 </div>
             </div>
         </div>
@@ -61,11 +61,17 @@
 
         <div class="xui-card" id="resume-card">
             <h2 class="card-title">Resume</h2>
-            <ul class="list-view">
-                <li class="item">
-                    <img src="assets/img/cases/thumb-p1.jpg" />
-                </li>
-            </ul>
+            <div class="resume-buttons">
+                <a href="#" class="xui-btn xui-btn-default"><i class="fa fa-download"></i> Download Resume</a>
+                <a href="#" class="xui-btn xui-btn-default"><i class="fa fa-at"></i> Get in Touch </a>
+            </div>
+            <h3 class="section-title"><i class="fa fa-university"></i> Education </h3>
+            
+            <div class="resume-item">
+                <h3 class="title">Digital Media Technology</h3>
+                <h5 class="sub-title">XuChang University ( 4 Years ) <span> - Graduation June 2014</span></h5>
+                <p class="description">This is a subject belong to computer science department.<p>
+            </div>
         </div>
         <!-- end of resume card -->
 
