--- a/index.html
+++ b/index.html
@@ -65,13 +65,33 @@
                 <a href="#" class="xui-btn xui-btn-default"><i class="fa fa-download"></i> Download Resume</a>
                 <a href="#" class="xui-btn xui-btn-default"><i class="fa fa-at"></i> Get in Touch </a>
             </div>
-            <h3 class="section-title"><i class="fa fa-university"></i> Education </h3>
-            
-            <div class="resume-item">
-                <h3 class="title">Digital Media Technology</h3>
-                <h5 class="sub-title">XuChang University ( 4 Years ) <span> - Graduation June 2014</span></h5>
-                <p class="description">This is a subject belong to computer science department.<p>
-            </div>
+
+            <section class="education">
+                <h3 class="section-title"><i class="fa fa-university"></i> Education </h3>
+                
+                <div class="resume-item">
+                    <h3 class="title">Digital Media Technology</h3>
+                    <h5 class="sub-title">XuChang University ( 4 Years ) <span> - Graduation June 2014</span></h5>
+                    <p class="description">This is a subject belong to computer science department.<p>
+                </div>
+            </section>
+
+            <section class="work">
+                <h3 class="section-title"><i class="fa fa-tasks"></i> Work Experience </h3>
+
+                <div class="resume-item">
+                    <h3 class="title">AragonCS</h3>
+                    <h5 class="sub-title">PHP Engineer<span> - March 2015 - Now</span></h5>
+                    <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<p>
+                </div>
+
+                <div class="resume-item">
+                    <h3 class="title">Like Tuan</h3>
+                    <h5 class="sub-title">PHP Engineer<span> - June 2014 - Feb 2015</span></h5>
+                    <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<p>
+                </div>
+            </section>
+
         </div>
         <!-- end of resume card -->
 
@@ -88,16 +108,9 @@
                 </li>
                 <li class="item">
                     <div class="xui-progress">
-                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <div class="xui-progress-bar" data-percent="85%" style="width: 85%;"></div>
                         <span class="xui-progress-label">Problem Solving</span>
-                        <span class="xui-progress-completed">60%</span>
-                    </div>
-                </li>
-                <li class="item">
-                    <div class="xui-progress">
-                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
-                        <span class="xui-progress-label">OOP</span>
-                        <span class="xui-progress-completed">60%</span>
+                        <span class="xui-progress-completed">85%</span>
                     </div>
                 </li>
             </ul>
@@ -106,23 +119,23 @@
             <ul class="list-view skill-list">
                 <li class="item">
                     <div class="xui-progress">
-                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <div class="xui-progress-bar" data-percent="70%" style="width: 70%;"></div>
                         <span class="xui-progress-label">PHP</span>
-                        <span class="xui-progress-completed">60%</span>
+                        <span class="xui-progress-completed">70%</span>
                     </div>
                 </li>
                 <li class="item">
                     <div class="xui-progress">
-                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <div class="xui-progress-bar" data-percent="85%" style="width: 85%;"></div>
                         <span class="xui-progress-label">Html5/CSS3</span>
-                        <span class="xui-progress-completed">60%</span>
+                        <span class="xui-progress-completed">85%</span>
                     </div>
                 </li>
                 <li class="item">
                     <div class="xui-progress">
-                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <div class="xui-progress-bar" data-percent="75%" style="width: 75%;"></div>
                         <span class="xui-progress-label">Javascript</span>
-                        <span class="xui-progress-completed">60%</span>
+                        <span class="xui-progress-completed">75%</span>
                     </div>
                 </li>
             </ul>
@@ -132,7 +145,7 @@
                 <li class="item">
                     <div class="xui-progress">
                         <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
-                        <span class="xui-progress-label">Comunication</span>
+                        <span class="xui-progress-label">Mysql</span>
                         <span class="xui-progress-completed">60%</span>
                     </div>
                 </li>
@@ -175,23 +188,6 @@
                 <p>447360803@qq.com</p>
             </div>
             <h3 class="card-sub-title">Send Me a Message</h3>
-            <form action="/" id="contactForm" class="xui-form">
-                <div class="form-group">
-                    <input type="text" class="form-control" name="name" placeholder="Name" required/>
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" name="email" placeholder="Email" required/>
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required/>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" name="message" placeholder="Message" rows="5" required></textarea>
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="xui-btn submit-btn" value="Send!" />
-                </div>
-            </form>
         </div>
         <!-- end of contact card -->
 
