--- a/resume/index.html
+++ b/resume/index.html
@@ -4,33 +4,33 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<title>郗腾飞的个人简历[FRONT END ENGINEER]</title>
-<meta name="keywords" content="FRONT END ENGINEER 个人简历 Web开发 前端工程师">
+<title>郗腾飞的个人简历[PHP ENGINEER]</title>
+<meta name="keywords" content="PHP ENGINEER 个人简历 Web开发 PHP工程师">
 <meta name="description" content="郗腾飞的个人简历[PHP ENGINEER]">
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 <style type="text/css">
-body{margin:0;padding:0;background:#efefef;}
-.content-wrap{padding: 20px 0 0;background:#fff;}
-header{background-color:#323F4F;color:#fff;padding: 10px;position: relative;}
-header .title{padding: 5px;font-family: '楷体';border-bottom: 1px solid #9f9f9f;margin-left: 40px;margin-right: 150px;}
-header .title small{font-family: Arial;color: #efefef;font-size: 20px;}
-header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding: 5px;}
-.main-content{padding-top: 15px;}
-.header-infos{list-style: none;}
-.header-infos label{width: 80px;}
-.section-title{margin:10px 0;}
-.section-title span{position: relative;color: #fff;text-align: center;display: block;width: 200px;background: #323F4F;font-size: 20px;height: 34px;line-height: 34px;letter-spacing: 2px;}
-.section-title span:after{content: '';display: block;position: absolute;right: -10px;top: 0;width: 0;height: 0;border-top: 17px solid transparent;border-left: 10px solid #323F4F;border-bottom: 17px solid transparent;}
-.section-content{padding: 5px 60px;}
-.item-title > div{display: inline-block;font-size: 18px;width: 33%;}
-.item-title > div:last-of-type{text-align: center;}
-.education .item-title > div{width: 25%;}
+    body{margin:0;padding:0;background:#efefef;}
+    .content-wrap{padding: 20px 0 0;background:#fff; margin-top:20px; margin-bottom: 50px;}
+    header{background-color:#323F4F;color:#fff;padding: 10px;position: relative;}
+    header .title{padding: 5px;font-family: '楷体';border-bottom: 1px solid #9f9f9f;margin-left: 40px;margin-right: 150px;}
+    header .title small{font-family: Arial;color: #efefef;font-size: 20px;}
+    header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding: 5px;}
+    .main-content{padding-top: 15px; padding-bottom: 50px;}
+    .header-infos{list-style: none;}
+    .header-infos label{width: 80px;}
+    .section-title{margin:10px 0;}
+    .section-title span{position: relative;color: #fff;text-align: center;display: block;width: 200px;background: #323F4F;font-size: 20px;height: 34px;line-height: 34px;letter-spacing: 2px;}
+    .section-title span:after{content: '';display: block;position: absolute;right: -10px;top: 0;width: 0;height: 0;border-top: 17px solid transparent;border-left: 10px solid #323F4F;border-bottom: 17px solid transparent;}
+    .section-content{padding: 5px 60px;}
+    .item-title > div{display: inline-block;font-size: 18px;width: 33%;}
+    .item-title > div:last-of-type{text-align: center;}
+    .education .item-title > div{width: 25%;}
 </style>
 </head>
 <body>
 <div class="content-wrap container resume">
 	<header class="">
-		<h1 class="title">郗腾飞  <small>FRONT END ENGINEER</small></h1>
+		<h1 class="title">郗腾飞  <small>PHP ENGINEER</small></h1>
 		<ul class="header-infos">
 			<li><label>学历:</label>本科 </li>
 			<li><label>工作经验:</label>4年 </li>
@@ -45,57 +45,57 @@ header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding
 		<section>
 			<h2 class="section-title"><span>简介</span></h2>
 			<div class="section-content">
-				<p>四年web前后端开发经验，熟练H5/JS/JQuery/CSS，GIT/SVN，ThinkPHP/YII，善于学习，有较强解决难题的能力，工作认真，对代码质量有较高的要求。</p>
+				<p>四年web前端和后端开发经验，熟悉OOP思想，熟练LAMP，GIT/SVN，TP/YII，H5/JS/CSS，善于学习，有较强解决难题的能力，工作认真，对代码质量有较高的要求。</p>
 			</div>
 		</section>
 		<section>
 			<h2 class="section-title"><span>工作经历</span></h2>
 			<div class="section-content experiences">
-				<h3 class="item-title"><div class="date">2015.3 — 至今</div><div class="company">北京华美汉盛信息技术有限公司</div><div class="role">前端工程师</div></h3>
+				<h3 class="item-title"><div class="date">2015.3 — 至今</div><div class="company">北京华美汉盛信息技术有限公司</div><div class="role">PHP工程师</div></h3>
 				<div class="item-content">
 					<p><b>工作内容：</b></p>
-					<p>在美国Insomniac公司的Festival项目中担任前端工程师，并作为项目的Technical lead，负责相关任务的开发和指导：<br>
+					<p>服务于美国Insomniac公司的Festival（包括北美最大的电音节EDC）网站项目。 担任项目Technical lead的角色，负责所有任务的开发和指导：
 					1.负责项目的开发，上线，优化，解决技术难题；<br>
-					2.开发新的功能或需求；<br>
+					2.对在线站点进行维护，修复各种UI和功能的BUG，优化网站性能；<br>
 					3.负责代码和解决方案的Review，培养团队新成员。<br>
 					</p>
 					<p><b>工作业绩：</b></p>
-					<p>工作期间开发了几个WordPress的主题和插件, 用js开发了一些产品, 如Sound Cloud音乐播放器, Meme Generator等, 都得到了客户的一致好评。同时在项目中最大化地实现代码重用，避免做重复性的工作，经过对项目代码和结构的多次整合及优化后，开发效率得到了极大的提高。由于该项目的主要工作内容偏向前端，接触到前端方面的东西较多，同时个人也感觉对前端产生了浓厚的兴趣，因此开始考虑转向前端开发。</p>
+					<p>工作期间开发了几个WordPress的主题和插件，习惯将js的面向对象应用到开发中，同时用js开发了一些产品，如Sound Cloud音乐播放器，Meme Generator等，都得到了客户的一致好评。在项目中最大化地实现代码重用，避免做重复性的工作，经过对项目代码和结构的多次整合及优化后，开发效率得到了极大的提高。</p>
 				</div>
 
 				<h3 class="item-title"><div class="date">2014.7 — 2015.02</div><div class="company">莱客创新（北京）科技有限公司</div><div class="role">PHP工程师/组长</div></h3>  
 				<div class="item-content">
 					<p><b>工作内容：</b></p>
-					<p>在该公司期间，开始用Yii框架进行项目开发。参与了电子商务网站前后台的开发，后期主要负责连优APP服务端接口和后台管理系统的开发。在使用Yii框架进行开发的过程中对面向对象的理解更加深入。同时在这个项目中用到了Mongodb，Memcache以及服务器队列机制，Linux定时任务等技术。</p>
+					<p>在该公司期间，开始用Yii框架进行项目开发。参与了电子商务网站前后台的开发，后期主要负责连优APP服务端接口和后台管理系统的开发。在使用Yii框架进行开发的过程中对面向对象的理解更加深入。同时在这个项目中用到了Mongodb，Memcache以及服务器队列(Gearman)，Linux定时任务等技术。</p>
 				</div>
 
 				<h3 class="item-title"><div class="date">2013.10/2014.07</div><div class="company">北京友好互动科技发展有限公司</div><div class="role">PHP工程师</div></h3>
 				<div class="item-content">
 					<p><b>工作内容：</b></p>
-					<p>在该公司任职期间，主要负责管理和维护公司网站，开发应用的服务器接口。后期负责了宝宝街APP项目的开发，包括客户端开发和接口以及后台的开发。在该项目中研究并使用了PhoneGap以及jqmobi等前端框架，后台所用的框架是ThinkPHP。在该公司期间一直使用ubuntu系统作为开发环境，熟悉了linux的常用命令和操作。</p>
+					<p>这是一个开发儿童教育游戏类APP的公司，在该公司任职期间，主要负责管理和维护公司网站，开发应用的服务器接口。后期负责了宝宝街APP项目的开发，包括客户端开发和接口以及后台的开发。在该项目中研究并使用了PhoneGap以及jqmobi等前端框架，后台所用的框架是ThinkPHP。在该公司期间一直使用ubuntu系统作为开发环境，熟悉了linux的常用命令和操作。</p>
 				</div>
 			</div>
 		</section>
 		<section>
 			<h2 class="section-title"><span>教育背景</span></h2>
 			<div class="section-content education">
-				<h3 class="item-title"><div class="date">2010.09 — 2014.07</div><div class="university">许昌学院</div><div class="department">计算机科学与技术系</div><div class="degree">本科</di></p>
-			</div>
+				<h3 class="item-title"><div class="date">2010.09 — 2014.07</div><div class="university">许昌学院</div><div class="department">计算机科学与技术系</div><div class="degree">本科</di>
+            </div>
 		</section>
 		<section>
 			<h2 class="section-title"><span>项目经验</span></h2>
 			<div class="section-content">
-				<h3 class="item-title"><div class="title">Meme Generator</div><div class="role">前端工程师</div><div class="date">2017.06 — 2017.06</div></h3>
+				<h3 class="item-title"><div class="title">Meme Generator</div><div class="role">PHP工程师</div><div class="date">2017.06 — 2017.06</div></h3>
 				<div class="item-content">
 					<p><b>项目描述：</b></p>
 					<p>这是一个利用canvas技术做的在线合成图片的应用，用户可以放大或缩小，拖动上传的图片，输入自定义的文字，改变文字颜色，然后将合成的图片分享到facebook和twitter，也可以直接在线下载。为减轻服务器的压力，全部功能都是纯粹在浏览器端完成的，为实现分享功能, 图片也是直接从浏览器端先上传到S3存储服务上， 并对所有的js和css代码使用前端构建工具gulp进行了合并和压缩。</p>
 					<p><b>项目业绩：</b></p>
 					<p>项目上线后收到客户方的一致好评，并且根据谷歌GA的数据来看，用户使用体验良好。</p>
 				</div>
-				<h3 class="item-title"><div class="title">Sound Cloud 音乐播放器</div><div class="role">前端工程师</div><div class="date">2016.04 — 2016.04</div></h3>
+				<h3 class="item-title"><div class="title">Sound Cloud 音乐播放器</div><div class="role">PHP工程师</div><div class="date">2016.04 — 2016.04</div></h3>
 				<div class="item-content">
 					<p><b>项目描述：</b></p>
-					<p>开发一个基于Sound Cloud Javascript API的音乐播放器插件，要安装在客户所有的Festival站点上，并且需要实现切换页面时音乐播放不被打断的效果。解决方案是对全站开启了Ajax模式，从而实现切换页面音乐播放不暂停。由于Ajax模式的开启产生了很多问题， 然后将相关的一问题逐个进行了修复。今年又对代码进行了重构， 借鉴了Angular的思想将js代码模块化，优化过后的代码结构更加清晰，也易于扩展和维护。</p>
+					<p>开发一个基于Sound Cloud Javascript API的音乐播放器插件，要安装在客户所有的Festival站点上，并且需要实现切换页面时音乐播放不被打断的效果。解决方案是对全站开启了Ajax模式，从而实现切换页面音乐播放不暂停。由于Ajax模式的开启产生了很多问题， 然后将相关的一问题逐个进行了修复。2017年又对代码进行了重构， 借鉴了Angular的思想将js代码模块化，优化过后的代码结构更加清晰，也易于扩展和维护。</p>
 				</div>
 				<h3 class="item-title"><div class="title">约单APP</div><div class="role">PHP开发工程师／组长</div><div class="date">2014.08 — 2015.2</div></h3>
 				<div class="item-content">
@@ -112,15 +112,16 @@ header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding
 		<section>
 			<h2 class="section-title"><span>自我描述</span></h2>
 			<div class="section-content">
-<ol>
-	<li>熟练掌握DIV+CSS, HTML5, Js/Jquery/Ajax等前端技术，掌握WEB响应式开发。</li>
-	<li>熟悉JS面向对象, 喜欢js模块化开发，正在深入学习Vue和Reactjs。</li>
-	<li>掌握前端构建工具比如Gulp的使用，了解WebPack。 </li>
-	<li>有丰富的后台开发经验，并能熟练使用Git/Svn。</li>
-	<li>有较强的解决问题能力, 可以通过查看文档，Google搜索，自己尝试等方式，独立攻克技术难关，解决疑难杂症。</li>
-	<li>有很好的英文读写能力，能阅读英文文档，喜欢在stackoverflow找问题的答案。</li>
-	<li>做事有条理，喜欢整理和总结，比如收藏代码，知识笔记等。</li>
-</ul>
+			<ol>
+				<li>熟练掌握Linux, Apache, Mysql, PHP, 熟悉TP, Yii等框架， 熟练使用Git/Svn。</li>
+				<li>熟练掌握DIV+CSS, HTML5, Js/Jquery/Ajax等前端技术，熟悉JS面向对象，掌握WEB响应式开发。</li>
+				<li>有丰富的API接口开发经验和多种开放平台对接经验。</li>
+				<li>掌握前端构建工具比如Gulp的使用，对angular/vue/react等前端框架也有一定了解。</li>
+				<li>熟悉nosql技术，在项目中使用过Mongodb, 消息队列, Memcache等。</li>
+				<li>有较强的解决问题能力, 可以通过查看文档，Google搜索，自己尝试等方式，独立攻克技术难关，解决疑难杂症。</li>
+				<li>有很好的英文读写能力，能阅读英文文档，习惯在stackoverflow找问题的答案。</li>
+				<li>做事认真有条理，喜欢简洁的代码，喜欢整理和做笔记。</li>
+			</ul>
 			</div>
 		</section>
 	</div>
