update home page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="xui-card-desc">
                 <h1 class="main-title">Hi, i'm <i class="accent-color">XiTengfei!</i></h1>
-                <h2 class="sub-title">A PHP Developer</h2>
+                <h2 class="sub-title">A Frontend Developer</h2>
                 <hr>
                 <div class="description">
                     <p>I'm not a genius, but I've been working hard.</p>
@@ -84,7 +84,7 @@
 
                 <div class="resume-item">
                     <h3 class="title">AragonCS</h3>
-                    <h5 class="sub-title">PHP Engineer<span> - March 2015 - Now</span></h5>
+                    <h5 class="sub-title">Frontend Engineer<span> - March 2015 - Now</span></h5>
                     <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<p>
                 </div>
 
