--- a/20181015/public/index.html
+++ b/20181015/public/index.html
@@ -19,7 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>FE Programmer XiTengfei</title>
+    <meta name="keywords" content="frontend frogrammer"/>
+    <meta name="description" content="frontend frogrammer tengfei"/>
     <link href='http://fonts.font.im/css?family=Montserrat:400,700|Ubuntu:400,700' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
   </head>
