--- a/20181015/public/index.html
+++ b/20181015/public/index.html
@@ -22,8 +22,8 @@
     <title>FE Programmer XiTengfei</title>
     <meta name="keywords" content="frontend frogrammer"/>
     <meta name="description" content="frontend frogrammer tengfei"/>
-    <link href='http://fonts.font.im/css?family=Montserrat:400,700|Ubuntu:400,700' rel='stylesheet' type='text/css'>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
+    <link href='//fonts.font.im/css?family=Montserrat:400,700|Ubuntu:400,700' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
   </head>
   <body>
     <noscript>
