--- a/chunni/src/index.html
+++ b/chunni/src/index.html
@@ -9,8 +9,6 @@
 <meta name="description" content="落红不是无情物 化作春泥更护花"/>
 <link rel="icon" href="./favicon.png" type="image/x-icon">
 <link href='http://cdn.webfont.youziku.com/webfonts/nomal/93597/45807/5c9f7586f629d80760cd24cc.css' rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="./css/normalize.css" />
-<link rel="stylesheet" href="./css/app.css" />
 <style type="text/css">
 /*layout*/
 html{position: relative;min-height: 100%;}
@@ -22,7 +20,7 @@ footer{height: 60px;width: 100%;position: absolute;bottom: 0;padding: 10px;box-s
 <body>
 <header>
     <div class="container page-header">
-        <div class="logo"><img src="./img/spring-tree.svg" width="108" alt="logo" /></div>
+        <div class="logo"><img src="" width="108" alt="logo" /></div>
         <div class="heading">
             <h1 class="title">春泥网</h1>
             <p class="subtitle">落红不是无情物，化作春泥更护花。</p>
