--- a/chunni/src/index.html
+++ b/chunni/src/index.html
@@ -39,10 +39,10 @@ footer{height: 60px;width: 100%;position: absolute;bottom: 0;padding: 10px;box-s
             </div>
         </div>
     </div>
-</div>
+</main>
 <footer>
     <div class="container copyright">
-        <p class="text-center">Build by <a href="https://xitengfei.github.io"> Tengfei </a> @2019 </p>
+        <p class="text-center">©2019 by<a href="https://xitengfei.github.io"> Tengfei.Xi</a>. All rights reserved.</p>
     </div>
 </footer>
 </body>
