--- a/chunni/src/index.html
+++ b/chunni/src/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <title>春泥网</title>
 <meta name="keywords" content="春泥网"/>
-<meta name="description" content="落红不是无情物 化作春泥更护花"/>
+<meta name="description" content="春泥网，绿色科技，致力于绿水青山"/>
 <link rel="icon" href="./favicon.png" type="image/x-icon">
 <link href='http://cdn.webfont.youziku.com/webfonts/nomal/93597/45807/5c9f7586f629d80760cd24cc.css' rel='stylesheet' type='text/css' />
 <style type="text/css">
