--- a/app/public/index.html
+++ b/app/public/index.html
@@ -35,6 +35,7 @@
     </script>
     <link href='//fonts.font.im/css?family=Montserrat:400,700|Ubuntu:400,700' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="//at.alicdn.com/t/font_1868121_1crts4alhay.css" rel='stylesheet' type='text/css' />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
